# typegraph

./: Cargo.toml  README.md
typegraph/: Cargo.toml
typegraph-macros/: Cargo.toml
typegraph-macros/src/: argument.rs  field.rs  function.rs  generic.rs  id.rs  implementation.rs  lib.rs  variant.rs
typegraph-test/: Cargo.toml
typegraph-test/src/: lib.rs  test.rs
typegraph/src/: container.rs  graph.rs  lib.rs  op.rs  primitive.rs  standard.rs
typegraph/src/value/: graphviz.rs  mod.rs
