[package]
name = "typegraph-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
inert = []
value = []

[dependencies]
deluxe = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rand = { workspace = true }
syn = { features = ["full", "visit", "visit-mut"], workspace = true }
typosaurus.workspace = true
